--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,16 +1,48 @@
-@import "~bootstrap/scss/bootstrap.scss";
+body {
+  background-color: #0e7e12;
+  box-sizing: border-box;
+}
 
-/* 
-    body{
-        background: #BDBDBD;
-    }
-    
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.card {
+  text-align: center;
+  background: white;
+  margin: auto;
+  height: 250px;
+  font-size: 80px;
+  width: 250px;
+  padding: 20px;
+  padding-top: 180px;
+  border: 1px solid black;
+  border-radius: 5px;
+  position: relative;
+  &:before {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 80px;
+  }
+  &:after {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    font-size: 80px;
+  }
+  &.spades:before,
+  &.spades:after {
+    content: "\2660";
+  }
+  &.clubs:before,
+  &.clubs:after {
+    content: "\2663";
+  }
+  &.hearts:before,
+  &.hearts:after {
+    content: "\2665";
+    color: red;
+  }
+  &.diams:before,
+  &.diams:after {
+    content: "\2666";
+    color: red;
+  }
+}
